{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ of chores were ticked, %@." : {
      "localizations" : {
        "fi" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Ei tehtäviä, nauti vapaapäivästä!"
          }
        }
      }
    },
    "Nothing today" : {
      "localizations" : {
        "fi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ei tehtäviä tänään"
          }
...
